Made Several improvements
- Added argparsing and yaml file parsing for the tool to use.
- Added index.rst jinja template so it can be dynamically created.
- Added page generator to process multiple pages at a time.

--- a/confluence_converter/jinja_templates/index.rst.j2
+++ b/confluence_converter/jinja_templates/index.rst.j2
@@ -12,8 +12,8 @@ if you are new go here :ref:`install Jubler <testpage>`
    :maxdepth: 2
    :caption: Contents:
 
-   pages/v3.7_deployable_interceptor_platform_(dip)_troubleshooting_guide
-   pages/test_page_delete_later_for_prototype
+{% for title in pages %}
+   pages/{{ title }}{% endfor %}
 
 
 Indices and tables
